--- a/css/styles.css
+++ b/css/styles.css
@@ -21,8 +21,19 @@ h4 {
 	margin: 0;
 }
 
-/* Mobile Styling */
+.success-title {
+	font-weight: 600;
+}
 
+.success-icon {
+	color: green;
+}
+
+.content-middle {
+	text-align: center;
+}
+
+/* Mobile Styling */
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
 	h4 {
